--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
-      <version>3.7.2</version>
+      <version>3.7.15-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.pdfbox</groupId>
